--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,12 @@ section {
 
 
 h1 {
-	font-family: "adelle-sans";
+	font-family: "adelle";
+	
+}
+
+h2 {
+	font-family: "adelle-sans"
 }
 
 /*logo*/
