--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 
-
+body {
+	background-color: #30272B;
+}
 
 
 
@@ -20,7 +22,8 @@ section {
 .pattern-1,
 .pattern-2,
 .pattern-3 {
-	border: 1px solid #000;
+	border: 1px solid #FFF;
+	border-radius: 25px;
 	float: left;
 	margin: 0 10px;
 	height: 50px;
@@ -34,13 +37,12 @@ section {
 
 }
 
+/*Text with description*/
 
 .title {
 	font-size: 40px;
 	font-family: "adelle";
 	color: #FA665A; 
-
-	
 }
 
 
@@ -51,22 +53,40 @@ section {
 
 }
 
-h2 {
+.primaryhead {
 	font-family: "adelle-sans", sans-serif;
 	font-size: 20px;
 	font-style: light-italic;
 	color:#8CBEB2;
+	letter-spacing:1px;
 }
 
-h2 + em {
+.primaryheadfont {
 	font-family: "adelle-sans", sans-serif;
 	font-size: 20px;
 	font-style: light-italic;
 	color:#8CBEB2;
+	letter-spacing:1px;
+}
+
+.secondaryhead {
+	font-size: 20px;
+	font-family: "adelle";
+	font-style: italic;
+	letter-spacing:1px;
+	color: white; 
+
 }
 
 
+.secondaryheadfont {
+	font-size: 20px;
+	font-family: "adelle";
+	font-style: italic;
+	letter-spacing:1px;
+	color: white; 
 
+}
 
 /*logo*/
 .section img {
